--- a/pocket-football-web/src/app/presentation/header/header.component.html
+++ b/pocket-football-web/src/app/presentation/header/header.component.html
@@ -1,8 +1,9 @@
 <div>
   <mat-toolbar color="primary">
     <mat-tab-group backgroundColor="primary" color="accent">
-      <mat-tab label="Начало"></mat-tab>
-      <mat-tab label="Събития"></mat-tab>
+      <mat-tab label="Мои мачове"></mat-tab>
+      <mat-tab label="Публични мачове"></mat-tab>
+      <mat-tab label="PocketFEED"></mat-tab>
       <mat-tab label="Турнири"></mat-tab>
     </mat-tab-group>
 
