Worked on match data presentation

--- a/pocket-football-web/src/app/presentation/event/my-match/my-match.component.css
+++ b/pocket-football-web/src/app/presentation/event/my-match/my-match.component.css
@@ -2,3 +2,22 @@
   font-size: 17px;
   width: 15px;
 }
+
+.flex-mat-list-container {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 12%;
+}
+
+.grid {
+  padding-left: 50px;
+  padding-right: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.mat-list-item-style {
+  max-width: 90%;
+}
+
+
