--- a/pocket-football-web/src/app/presentation/event/my-match/my-match.component.html
+++ b/pocket-football-web/src/app/presentation/event/my-match/my-match.component.html
@@ -1,19 +1,25 @@
-<mat-list>
-  <mat-list-item *ngFor="let match of dataSource">
-    <img matListAvatar [src]="match.image" alt="...">
+<div class="grid">
+  <mat-list >
+    <mat-list-item class="mat-list-item-style" *ngFor="let match of dataSource">
+      <img matListAvatar [src]="match.image" alt="...">
+      <h3 matLine> {{match.title}} </h3>
+      <p matLine>
+        <mat-icon class="host-icon" color="primary">accessibility</mat-icon>
+        <span> {{match.host}} </span>
+      </p>
+      <div>
+        {{match.currentParticipants}} / {{match.allowedParticipants}}
+      </div>
+      <mat-icon>done</mat-icon>
+      <mat-icon>clear</mat-icon>
+      <mat-divider></mat-divider>
+    </mat-list-item>
+  </mat-list>
 
+  <div>
+    <h3 style="display: flex; justify-content: center">
+      Profile
+    </h3>
+  </div>
 
-    <h3 matLine> {{match.title}} </h3>
-
-    <p matLine>
-      <mat-icon class="host-icon" color="primary">accessibility</mat-icon>
-      <span> {{match.host}} </span>
-    </p>
-    <div>
-      {{match.currentParticipants}} / {{match.allowedParticipants}}
-    </div>
-    <mat-icon>done</mat-icon>
-    <mat-icon>clear</mat-icon>
-    <mat-divider></mat-divider>
-  </mat-list-item>
-</mat-list>
+</div>
