Added changes for invite to matches page

--- a/pocket-football-web/src/app/presentation/event/my-match/my-match.component.css
+++ b/pocket-football-web/src/app/presentation/event/my-match/my-match.component.css
@@ -1,6 +1,7 @@
 .host-icon {
-  font-size: 17px;
-  width: 15px;
+  /*font-size: 17px;*/
+  /*!*width: 15px;*!*/
+  /*line-height: 100%;*/
 }
 
 .flex-mat-list-container {
