--- a/pocket-football-web/src/app/presentation/user/profile/profile.component.css
+++ b/pocket-football-web/src/app/presentation/user/profile/profile.component.css
@@ -72,6 +72,14 @@ mat-icon + span {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
+mat-card img {
+  object-fit: cover;
+  width: 40%;
+  height: 20%;
+}
+
+.mat-card-avatar {
+  border-radius: 0%;
+}
