--- a/pocket-football-web/src/app/presentation/user/home/home.component.html
+++ b/pocket-football-web/src/app/presentation/user/home/home.component.html
@@ -1,8 +1,46 @@
 <div class="home-container">
-  <div class="center">
 
-    <button mat-raised-button>Log in</button>
-    <button mat-raised-button color="primary">Sign up</button>
+  <div class="logo-picture">
+    <span>TEST IT</span>
+  </div>
+
+  <div class="sign-in">
+    <mat-label>Sign In</mat-label>
+    <form class="sign-in-form">
+      <mat-form-field>
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="Email">
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput placeholder="Password">
+      </mat-form-field>
+    </form>
+    <button mat-raised-button color="primary">Login</button>
+  </div>
+
+  <div class="log-in">
+    <span> LOG IN</span>
+    <span> LOG IN</span>
+    <span> LOG IN</span>
+    <span> LOG IN</span>
+    <span> LOG IN</span>
+    <span> LOG IN</span>
+    <span> LOG IN</span>
+
+  </div>
+
+  <div class="register">
+    <span> REGISTER</span>
+    <span> REGISTER</span>
+    <span> REGISTER</span><span> REGISTER</span>
+    <span> REGISTER</span>
+    <span> REGISTER</span>
+    <span> REGISTER</span>
+    <span> REGISTER</span>
+    <span> REGISTER</span>
+
   </div>
 </div>
 
