--- a/pocket-football-web/src/app/presentation/user/home/home.component.html
+++ b/pocket-football-web/src/app/presentation/user/home/home.component.html
@@ -1,7 +1,6 @@
 <div class="home-container">
 
   <div class="logo-picture">
-    <span>TEST IT</span>
   </div>
 
   <div class="sign-in">
@@ -21,14 +20,14 @@
   </div>
 
   <div class="log-in">
-    <span> LOG IN</span>
-    <span> LOG IN</span>
-    <span> LOG IN</span>
-    <span> LOG IN</span>
-    <span> LOG IN</span>
-    <span> LOG IN</span>
-    <span> LOG IN</span>
-
+    <div class="log-in-text-divider">
+      Log in
+    </div>
+    <div class="login-buttons">
+      <button mat-icon-button class="icon-login-buttons" color="primary">
+        <mat-icon class="icon-login-buttons">facebook</mat-icon>
+      </button>
+    </div>
   </div>
 
   <div class="register">
