--- a/pocket-football-web/src/app/presentation/user/home/home.component.html
+++ b/pocket-football-web/src/app/presentation/user/home/home.component.html
@@ -21,7 +21,7 @@
 
   <div class="log-in">
     <div class="log-in-text-divider">
-      Log in
+      Log in with
     </div>
     <div class="login-buttons">
       <button mat-icon-button class="icon-login-buttons" color="primary">
@@ -30,16 +30,21 @@
     </div>
   </div>
 
-  <div class="register">
-    <span> REGISTER</span>
-    <span> REGISTER</span>
-    <span> REGISTER</span><span> REGISTER</span>
-    <span> REGISTER</span>
-    <span> REGISTER</span>
-    <span> REGISTER</span>
-    <span> REGISTER</span>
-    <span> REGISTER</span>
+  <div class="register background-color-primary">
+    <div class="register-title color-accent">
+      Register to join Pocket Football community
+    </div>
 
+    <div class="register-content">
+      <div class="register-text">
+        Create football events
+        Join football tournaments or invite your friends to create ultimate football community!
+      </div>
+
+      <button mat-raised-button class="register-button" color="accent">
+        Sign Up!
+      </button>
+    </div>
   </div>
 </div>
 
