Added final login draft version corrections

--- a/pocket-football-web/src/app/presentation/user/home/home.component.html
+++ b/pocket-football-web/src/app/presentation/user/home/home.component.html
@@ -37,8 +37,9 @@
 
     <div class="register-content">
       <div class="register-text">
-        Create football events
-        Join football tournaments or invite your friends to create ultimate football community!
+        Create football events.<br>
+        Join football tournaments. <br>
+        Invite your friends to create ultimate football community!
       </div>
 
       <button mat-raised-button class="register-button" color="accent">
