--- a/pocket-football-web/src/styles.scss
+++ b/pocket-football-web/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'src/themes/main/main-theme.scss';
-@import 'src/themes/main/utils.scss';
+@import 'src/themes/main/color-utils';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
