Added input fields to the register component, still in progress

--- a/pocket-football-web/src/app/presentation/user/register/register.component.html
+++ b/pocket-football-web/src/app/presentation/user/register/register.component.html
@@ -1,6 +1,70 @@
-<form class="register-form">
-  <mat-form-field>
-    <mat-label>Favorite food</mat-label>
-    <input matInput placeholder="Ex. Pizza" value="Sushi">
-  </mat-form-field>
-</form>
+
+<div class="container">
+  <div class="register-fields">
+    <div>
+      <h2>Register to start your pocket football journey</h2>
+    </div>
+
+    <div class="field">
+      <mat-label>Full Name</mat-label>
+      <form>
+        <mat-form-field>
+          <input matInput>
+        </mat-form-field>
+      </form>
+    </div>
+
+    <div class="field">
+      <mat-label>Last Name</mat-label>
+      <form>
+        <mat-form-field>
+          <input matInput>
+        </mat-form-field>
+      </form>
+    </div>
+
+    <div class="field">
+      <mat-label>Email Address</mat-label>
+      <form>
+        <mat-form-field>
+          <input matInput>
+        </mat-form-field>
+      </form>
+    </div>
+
+    <div class="field">
+      <mat-label>Password</mat-label>
+      <form>
+        <mat-form-field>
+          <input matInput>
+        </mat-form-field>
+      </form>
+    </div>
+
+    <div class="field">
+      <mat-label>Re-Password</mat-label>
+      <form>
+        <mat-form-field>
+          <input matInput>
+        </mat-form-field>
+      </form>
+    </div>
+
+    <div class="field">
+      <mat-label>Date of Birth</mat-label>
+      <form>
+        <mat-form-field>
+          <input matInput>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput>
+        </mat-form-field>
+      </form>
+    </div>
+  </div>
+
+</div>
+
