--- a/pocket-football-web/src/app/presentation/user/register/register.component.css
+++ b/pocket-football-web/src/app/presentation/user/register/register.component.css
@@ -8,8 +8,18 @@
   flex-direction: column;
 }
 
+mat-form-field {
+  width: 60%;
+}
+
+button {
+  width: 40%;
+  left: 50%;
+}
+
 .field {
   display: flex;
   flex-direction: row;
   align-items: baseline;
+  justify-content: space-between;
 }
