--- a/pocket-football-web/src/app/presentation/user/register/register.component.html
+++ b/pocket-football-web/src/app/presentation/user/register/register.component.html
@@ -1,70 +1,56 @@
 
 <div class="container">
-  <div class="register-fields">
-    <div>
-      <h2>Register to start your pocket football journey</h2>
-    </div>
+    <div class="register-fields">
+      <div>
+        <h2>Register to start your pocket football journey</h2>
+      </div>
 
-    <div class="field">
-      <mat-label>Full Name</mat-label>
-      <form>
-        <mat-form-field>
+
+      <form class="field">
+        <mat-label>
+          Full Name
+        </mat-label>
+        <mat-form-field appearance="fill">
           <input matInput>
         </mat-form-field>
       </form>
-    </div>
 
-    <div class="field">
-      <mat-label>Last Name</mat-label>
-      <form>
-        <mat-form-field>
+      <form class="field">
+        <mat-label>
+          Last Name
+        </mat-label>
+        <mat-form-field appearance="fill">
           <input matInput>
         </mat-form-field>
       </form>
-    </div>
 
-    <div class="field">
-      <mat-label>Email Address</mat-label>
-      <form>
-        <mat-form-field>
+      <form class="field">
+        <mat-label>
+          Email Address
+        </mat-label>
+        <mat-form-field appearance="fill">
           <input matInput>
         </mat-form-field>
       </form>
-    </div>
 
-    <div class="field">
-      <mat-label>Password</mat-label>
-      <form>
-        <mat-form-field>
-          <input matInput>
+      <form class="field">
+        <mat-label>
+          Password
+        </mat-label>
+        <mat-form-field appearance="fill">
+          <input type="password" matInput>
         </mat-form-field>
       </form>
-    </div>
 
-    <div class="field">
-      <mat-label>Re-Password</mat-label>
-      <form>
-        <mat-form-field>
-          <input matInput>
+      <form class="field">
+        <mat-label>
+          Re-Password
+        </mat-label>
+        <mat-form-field appearance="fill">
+          <input type="password" matInput>
         </mat-form-field>
       </form>
-    </div>
 
-    <div class="field">
-      <mat-label>Date of Birth</mat-label>
-      <form>
-        <mat-form-field>
-          <input matInput>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput>
-        </mat-form-field>
-      </form>
-    </div>
+      <button mat-raised-button color="primary"> Register </button>
   </div>
-
 </div>
-
